--- a/main.ipynb
+++ b/main.ipynb
@@ -2,25 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install -r requirements.txt -q"
+    "# !pip install -r requirements.txt -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,34 +19,35 @@
     "import cv2\n",
     "import random\n",
     "import numpy as np\n",
-    "import dotenv\n",
+    "from dotenv import load_dotenv\n",
     "import os\n",
     "from inference_sdk import InferenceHTTPClient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from segmentator import Segmentator\n",
+    "from segmentator import Segmentator, find_tangent_lines, HeadSegmentator, px_in_cm, get_head_edge_points, get_head_highest_points\n",
     "from detector import Detector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "segm = Segmentator(model_path=\"weights/segmentation.pt\")\n",
-    "det = Detector(model_id=\"hip-joint-detection/2\")"
+    "det = Detector(model_id=\"hip-joint-detection/2\")\n",
+    "head_segm = HeadSegmentator(model_id=\"femur-head-segmentation/2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +59,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Detect all results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -76,175 +75,249 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 640x640 1 big-hole, 2 bone-hollows, 312.1ms\n",
-      "Speed: 2.4ms preprocess, 312.1ms inference, 4.0ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "0: 640x640 1 big-hole, 2 bone-hollows, 652.6ms\n",
+      "Speed: 4.5ms preprocess, 652.6ms inference, 11.6ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "((209, 238), (19, -743)) left\n",
+      "left_edge_point {'x': 101.0, 'y': 200.0}\n",
+      "right_edge_point {'x': 534.0, 'y': 201.0}\n",
+      "{'x': 132.0, 'y': 173.0}\n",
+      "{'x': 475.0, 'y': 169.0}\n",
+      "left_highest_point (132.0, 163.685)\n",
+      "right_highest_point (475.0, 159.685)\n",
+      "left_right_highest_point (19, -743)\n",
+      "right_left_highest_point (642, -734)\n"
      ]
     }
    ],
    "source": [
-    "det.save_image(det.draw_detection(image3, det.detect(image3)), detected)\n",
-    "res_segm = segm.segment(detected)\n",
-    "segm.save_image(segm.draw_segmentation(detected,res_segm), \"test_data/segmented.jpg\")\n"
+    "image = cv2.imread(image1)\n",
+    "det_results = det.detect(image1)\n",
+    "head_segm_results = head_segm.segment(image1)\n",
+    "segm_results = segm.segment(image1)\n",
+    "_, left_line, right_line, left_hole_top_left, right_hole_top_right, new_points = find_tangent_lines(image1, segm_results, det_results)\n",
+    "cm = px_in_cm(det_results)\n",
+    "head_edge_points = get_head_edge_points(head_segm_results)\n",
+    "left_edge_point = min(head_edge_points[0], key=lambda x: x['x'])\n",
+    "print(\"left_edge_point\", left_edge_point)\n",
+    "right_edge_point =  max(head_edge_points[1], key=lambda x: x['x'])\n",
+    "print(\"right_edge_point\", right_edge_point)\n",
+    "head_highest_points = get_head_highest_points(head_segm_results, cm) \n",
+    "left_highest_point, right_highest_point = head_highest_points[0], head_highest_points[1]\n",
+    "print(\"left_highest_point\", left_highest_point)\n",
+    "print(\"right_highest_point\", right_highest_point)\n",
+    "left_right_highest_point = new_points[0]\n",
+    "print(\"left_right_highest_point\", left_right_highest_point)\n",
+    "right_left_highest_point = new_points[1]\n",
+    "print(\"right_left_highest_point\", right_left_highest_point)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_tangent_lines(image_path, segmentation_results, detection_results):\n",
-    "    image = cv2.imread(image_path)\n",
-    "    mask = np.zeros(image.shape[:2], dtype=np.uint8)\n",
-    "    for result in segmentation_results:\n",
-    "        for seg in result.masks.xy:\n",
-    "            points = np.int32([seg])\n",
-    "            cv2.fillPoly(mask, points, 255)\n",
-    "\n",
-    "    contours, _ = cv2.findContours(mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "\n",
-    "    if not contours:\n",
-    "        print(\"No contours found in segmentation.\")\n",
-    "        return image\n",
-    "\n",
-    "    green_contour = max(contours, key=cv2.contourArea)\n",
-    "\n",
-    "    small_holes = []\n",
-    "    for result in detection_results:\n",
-    "        if result['class'] == 'small-hole':\n",
-    "            x, y, w, h = result['x'], result['y'], result['width'], result['height']\n",
-    "            top_right = (int(x + w / 2), int(y - h / 2))\n",
-    "            top_left = (int(x - w / 2), int(y - h / 2))\n",
-    "            small_holes.append((top_left, top_right))\n",
-    "\n",
-    "    if len(small_holes) < 2:\n",
-    "        print(\"Not enough 'small-hole' detections to draw tangent lines.\")\n",
-    "        return image\n",
-    "\n",
-    "    left_hole = min(small_holes, key=lambda x: x[0][0])\n",
-    "    right_hole = max(small_holes, key=lambda x: x[0][0])\n",
-    "    left_hole_top_left, left_hole_top_right = left_hole\n",
-    "    right_hole_top_left, right_hole_top_right = right_hole\n",
-    "\n",
-    "\n",
-    "    def line_intersects_contour(point1, point2, contour):\n",
-    "        mask_line = np.zeros(image.shape[:2], dtype=np.uint8)\n",
-    "        cv2.line(mask_line, point1, point2, 255, 1)\n",
-    "        mask_contour = np.zeros(image.shape[:2], dtype=np.uint8)\n",
-    "        cv2.drawContours(mask_contour, [contour], -1, 255, 1)\n",
-    "        intersection = cv2.bitwise_and(mask_line, mask_contour)\n",
-    "        return np.any(intersection)\n",
-    "    \n",
-    "\n",
-    "    left_line_points = None\n",
-    "    for angle in range(0, 90):\n",
-    "        length = 1000\n",
-    "        theta = np.radians(180 - angle)\n",
-    "        x_offset = int(length * np.cos(theta))\n",
-    "        y_offset = int(length * np.sin(theta))\n",
-    "        new_point = (left_hole_top_left[0] + x_offset, left_hole_top_left[1] - y_offset)\n",
-    "        if line_intersects_contour(left_hole_top_left, new_point, green_contour):\n",
-    "            left_line_points = (left_hole_top_left, new_point)\n",
-    "            cv2.line(image, left_hole_top_left, new_point, (255, 0, 0), 2)\n",
-    "            break\n",
-    "\n",
-    "    right_line_points = None\n",
-    "    for angle in range(0, 90):\n",
-    "        length = 1000\n",
-    "        theta = np.radians(angle)\n",
-    "        x_offset = int(length * np.cos(theta))\n",
-    "        y_offset = int(length * np.sin(theta))\n",
-    "        new_point = (right_hole_top_right[0] + x_offset, right_hole_top_right[1] - y_offset)\n",
-    "        if line_intersects_contour(right_hole_top_right, new_point, green_contour):\n",
-    "            right_line_points = (right_hole_top_right, new_point)\n",
-    "            cv2.line(image, right_hole_top_right, new_point, (0, 255, 0), 2)\n",
-    "            break\n",
-    "\n",
-    "    return image, left_line_points, right_line_points"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "0: 640x640 1 big-hole, 2 bone-hollows, 628.9ms\n",
-      "Speed: 21.3ms preprocess, 628.9ms inference, 3.6ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "left_right_top (193, 163)\n",
+      "right_left_top (436, 159)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "left_left_top = (int(left_edge_point['x']), int(left_highest_point[1]))\n",
+    "left_left_bottom = (int(left_edge_point['x']), int(left_hole_top_left[1]))\n",
+    "left_right_top = (int(left_right_highest_point[0]),int(left_highest_point[1]))\n",
+    "\n",
+    "dist_left = left_left_top[0] - left_right_top[0]\n",
+    "left_right_top = (int(left_right_highest_point[0] + 2*dist_left + 10), int(left_highest_point[1]))\n",
+    "\n",
+    "print(\"left_right_top\", left_right_top)\n",
+    "left_right_bottom = (int(left_hole_top_left[0]), int(left_hole_top_left[1]))\n",
+    "\n",
+    "right_right_top = (int(right_edge_point['x']), int(right_highest_point[1]))\n",
+    "right_right_bottom = (int(right_edge_point['x']), int(right_hole_top_right[1]))\n",
+    "right_left_top = (int(right_left_highest_point[0]), int(right_highest_point[1]))\n",
+    "dist_right = right_right_top[0] - right_left_highest_point[0] \n",
+    "right_left_top = (int(right_left_highest_point[0] + 2*dist_right + 10), int(right_highest_point[1]))\n",
+    "\n",
+    "print(\"right_left_top\", right_left_top)  \n",
+    "# right_left_top = (int(right_left_highest_point[0] - 2*dist_right - 10), int(right_highest_point[1]))\n",
+    "right_left_bottom = (int(right_hole_top_right[0]), int(right_hole_top_right[1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 16,  81,  12],\n",
+       "        [ 73, 134,  70],\n",
+       "        [  0,  38,   0],\n",
+       "        ...,\n",
+       "        [ 58, 114,  61],\n",
+       "        [ 64, 126,  66],\n",
+       "        [140, 208, 143]],\n",
+       "\n",
+       "       [[  0,  45,   0],\n",
+       "        [  0,  51,   0],\n",
+       "        [  0,  20,   0],\n",
+       "        ...,\n",
+       "        [  9,  59,  11],\n",
+       "        [ 45, 102,  47],\n",
+       "        [129, 191, 131]],\n",
+       "\n",
+       "       [[  0,  27,   0],\n",
+       "        [  0,  20,   0],\n",
+       "        [  0,  17,   0],\n",
+       "        ...,\n",
+       "        [  0,  21,   0],\n",
+       "        [  0,  33,   0],\n",
+       "        [147, 199, 146]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[  0,  23,   0],\n",
+       "        [  0,  42,   0],\n",
+       "        [  0,  16,   0],\n",
+       "        ...,\n",
+       "        [  0,   9,   0],\n",
+       "        [ 55,  92,  54],\n",
+       "        [143, 185, 137]],\n",
+       "\n",
+       "       [[ 23,  81,  22],\n",
+       "        [ 39,  94,  37],\n",
+       "        [  0,  27,   0],\n",
+       "        ...,\n",
+       "        [  0,  21,   0],\n",
+       "        [ 75, 118,  73],\n",
+       "        [152, 203, 146]],\n",
+       "\n",
+       "       [[  0,  38,   0],\n",
+       "        [ 17,  77,  17],\n",
+       "        [  0,  23,   0],\n",
+       "        ...,\n",
+       "        [  0,  23,   0],\n",
+       "        [  0,  43,   0],\n",
+       "        [143, 197, 138]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.circle(image, left_left_top, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, left_left_bottom, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, left_right_top, 5, (0, 255, 0), -1)\n",
+    "cv2.circle(image, left_right_bottom, 5, (0, 0, 255), -1)\n",
+    "\n",
+    "cv2.circle(image, right_right_top, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, right_right_bottom, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, right_left_top, 5, (0, 255, 0), -1)\n",
+    "cv2.circle(image, right_left_bottom, 5, (0, 0, 255), -1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 16,  81,  12],\n",
+       "        [ 73, 134,  70],\n",
+       "        [  0,  38,   0],\n",
+       "        ...,\n",
+       "        [ 58, 114,  61],\n",
+       "        [ 64, 126,  66],\n",
+       "        [140, 208, 143]],\n",
+       "\n",
+       "       [[  0,  45,   0],\n",
+       "        [  0,  51,   0],\n",
+       "        [  0,  20,   0],\n",
+       "        ...,\n",
+       "        [  9,  59,  11],\n",
+       "        [ 45, 102,  47],\n",
+       "        [129, 191, 131]],\n",
+       "\n",
+       "       [[  0,  27,   0],\n",
+       "        [  0,  20,   0],\n",
+       "        [  0,  17,   0],\n",
+       "        ...,\n",
+       "        [  0,  21,   0],\n",
+       "        [  0,  33,   0],\n",
+       "        [147, 199, 146]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[  0,  23,   0],\n",
+       "        [  0,  42,   0],\n",
+       "        [  0,  16,   0],\n",
+       "        ...,\n",
+       "        [  0,   9,   0],\n",
+       "        [ 55,  92,  54],\n",
+       "        [143, 185, 137]],\n",
+       "\n",
+       "       [[ 23,  81,  22],\n",
+       "        [ 39,  94,  37],\n",
+       "        [  0,  27,   0],\n",
+       "        ...,\n",
+       "        [  0,  21,   0],\n",
+       "        [ 75, 118,  73],\n",
+       "        [152, 203, 146]],\n",
+       "\n",
+       "       [[  0,  38,   0],\n",
+       "        [ 17,  77,  17],\n",
+       "        [  0,  23,   0],\n",
+       "        ...,\n",
+       "        [  0,  23,   0],\n",
+       "        [  0,  43,   0],\n",
+       "        [143, 197, 138]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "cv2.line(image, left_line[0], left_line[1], (255, 0, 0), 2)\n",
+    "cv2.line(image, right_line[0], right_line[1], (0, 255, 0), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res_segm = segm.segment(image1)\n",
-    "res_det = det.detect(image1)\n",
-    "# image = draw_tangent_lines(image1, res_segm, res_det)\n",
-    "_, left_line, right_line = find_tangent_lines(image1, res_segm, res_det)\n",
-    "\n",
-    "image = cv2.imread(image1)\n",
-    "cv2.line(image, left_line[0], left_line[1], (255, 0, 0), 2)\n",
-    "cv2.line(image, right_line[0], right_line[1], (0, 255, 0), 2)\n",
-    "cv2.imwrite(\"test_data/tangent_lines.jpg\", image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_detect2 = det.detect(\"test_data/img2.jpg\")\n",
-    "res_detect3 = det.detect(\"test_data/img3.jpg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def px_in_cm(results):\n",
-    "    pixels = None\n",
-    "    for res in results:\n",
-    "        if res['class'] == 'scale-mark':\n",
-    "            pixels = res['width']\n",
-    "            break\n",
-    "    return pixels * 0.8\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pixels in cm: 21.6\n",
-      "Pixels in cm: 20.0\n",
-      "Pixels in cm: 20.8\n"
-     ]
-    }
-   ],
-   "source": [
-    "for res in [res_detect, res_detect2, res_detect3]:\n",
-    "    pixels = px_in_cm(res)\n",
-    "    print(f\"Pixels in cm: {pixels}\")\n",
-    "    \n"
+    "cv2.imwrite('test_data/tangent_lines.jpg', image)"
    ]
   },
   {
