added correct segmentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from segmentator import Segmentator, find_tangent_lines, HeadSegmentator, px_in_cm, get_head_edge_points, get_head_highest_points\n",
+    "from segmentator import *\n",
     "from detector import Detector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "image1 = 'test_data/img1.jpg'\n",
-    "image2 = 'test_data/img2.jpg'\n",
+    "image2 = 'test_data/image_2024-10-04_08-59-24_png.rf.c1dac7f8fb2ed3f0950689b41f877e6f.jpg'\n",
     "image3 = 'test_data/img3.jpg'\n",
+    "image4 = 'test_data/image_2024-10-04_08-46-53_png.rf.e1eb4001b3f260482098dec04f490213.jpg'\n",
+    "image5 = 'test_data/image_2024-10-04_08-55-22_png.rf.a44311a6ee632be9fb8d0d342e06e64e.jpg'\n",
+    "image6 = 'test_data/image_2024-10-04_08-54-17_png.rf.18717b3145384864f2123e2774fb4371.jpg'\n",
+    "image7 = 'test_data/image_2024-10-04_08-59-24_png.rf.c1dac7f8fb2ed3f0950689b41f877e6f.jpg'\n",
     "detected = 'test_data/detected.jpg'\n",
     "segmented = 'test_data/segmented.jpg'"
    ]
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -75,234 +79,148 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 640x640 1 big-hole, 2 bone-hollows, 652.6ms\n",
-      "Speed: 4.5ms preprocess, 652.6ms inference, 11.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "((209, 238), (19, -743)) left\n",
-      "left_edge_point {'x': 101.0, 'y': 200.0}\n",
-      "right_edge_point {'x': 534.0, 'y': 201.0}\n",
-      "{'x': 132.0, 'y': 173.0}\n",
-      "{'x': 475.0, 'y': 169.0}\n",
-      "left_highest_point (132.0, 163.685)\n",
-      "right_highest_point (475.0, 159.685)\n",
-      "left_right_highest_point (19, -743)\n",
-      "right_left_highest_point (642, -734)\n"
+      "0: 640x640 1 big-hole, 2 bone-hollows, 307.4ms\n",
+      "Speed: 2.1ms preprocess, 307.4ms inference, 3.7ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     }
    ],
    "source": [
-    "image = cv2.imread(image1)\n",
-    "det_results = det.detect(image1)\n",
-    "head_segm_results = head_segm.segment(image1)\n",
-    "segm_results = segm.segment(image1)\n",
-    "_, left_line, right_line, left_hole_top_left, right_hole_top_right, new_points = find_tangent_lines(image1, segm_results, det_results)\n",
+    "img = image4\n",
+    "image = cv2.imread(img)\n",
+    "det_results = det.detect(img)\n",
+    "head_segm_results = head_segm.segment(img)\n",
+    "segm_results = segm.segment(img)\n",
+    "tang_dict = find_tangent_lines(img, segm_results, det_results)\n",
     "cm = px_in_cm(det_results)\n",
+    "\n",
+    "new_points = tang_dict['new_points']\n",
+    "L_line = tang_dict['left_line_points']\n",
+    "R_line = tang_dict['right_line_points']\n",
+    "L_hole_top_left = tang_dict['left_hole_top_left']\n",
+    "R_hole_top_right = tang_dict['right_hole_top_right']\n",
+    "\n",
     "head_edge_points = get_head_edge_points(head_segm_results)\n",
-    "left_edge_point = min(head_edge_points[0], key=lambda x: x['x'])\n",
-    "print(\"left_edge_point\", left_edge_point)\n",
-    "right_edge_point =  max(head_edge_points[1], key=lambda x: x['x'])\n",
-    "print(\"right_edge_point\", right_edge_point)\n",
     "head_highest_points = get_head_highest_points(head_segm_results, cm) \n",
-    "left_highest_point, right_highest_point = head_highest_points[0], head_highest_points[1]\n",
-    "print(\"left_highest_point\", left_highest_point)\n",
-    "print(\"right_highest_point\", right_highest_point)\n",
-    "left_right_highest_point = new_points[0]\n",
-    "print(\"left_right_highest_point\", left_right_highest_point)\n",
-    "right_left_highest_point = new_points[1]\n",
-    "print(\"right_left_highest_point\", right_left_highest_point)"
+    "\n",
+    "\n",
+    "L_edge_point, R_edge_point = get_head_edge_points(head_segm_results)\n",
+    "\n",
+    "L_highest_point, R_highest_point = head_highest_points[0], head_highest_points[1]\n",
+    "L_right_highest_point = new_points[0]\n",
+    "R_left_highest_point = new_points[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "left_right_top (193, 163)\n",
-      "right_left_top (436, 159)\n"
+      "\n",
+      "0: 640x640 1 big-hole, 2 bone-hollows, 631.8ms\n",
+      "Speed: 5.6ms preprocess, 631.8ms inference, 4.3ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "(array([[[ 35,  90,  35],\n",
+      "        [  1,  53,   0],\n",
+      "        [  0,  18,   0],\n",
+      "        ...,\n",
+      "        [  0,  32,   0],\n",
+      "        [  5,  65,   1],\n",
+      "        [  8,  73,   4]],\n",
+      "\n",
+      "       [[ 45,  94,  44],\n",
+      "        [ 81, 127,  80],\n",
+      "        [  0,  17,   0],\n",
+      "        ...,\n",
+      "        [  0,  32,   0],\n",
+      "        [  9,  65,   6],\n",
+      "        [ 29,  90,  26]],\n",
+      "\n",
+      "       [[ 34,  74,  32],\n",
+      "        [ 64, 101,  63],\n",
+      "        [  0,  13,   0],\n",
+      "        ...,\n",
+      "        [  0,  17,   0],\n",
+      "        [  0,  20,   0],\n",
+      "        [  0,  33,   0]],\n",
+      "\n",
+      "       ...,\n",
+      "\n",
+      "       [[ 51,  84,  50],\n",
+      "        [ 64,  94,  65],\n",
+      "        [  0,   8,   0],\n",
+      "        ...,\n",
+      "        [  0,   6,  15],\n",
+      "        [  0,   7,   0],\n",
+      "        [  0,  14,   0]],\n",
+      "\n",
+      "       [[ 36,  69,  35],\n",
+      "        [  8,  38,   9],\n",
+      "        [  0,   8,   0],\n",
+      "        ...,\n",
+      "        [  0,   8,   5],\n",
+      "        [  0,  13,   0],\n",
+      "        [ 19,  50,   5]],\n",
+      "\n",
+      "       [[ 51,  84,  50],\n",
+      "        [  0,  12,   0],\n",
+      "        [  0,   8,   0],\n",
+      "        ...,\n",
+      "        [  0,   4,   0],\n",
+      "        [  0,  24,   0],\n",
+      "        [ 90, 121,  70]]], dtype=uint8), {'L_edge_point': (120.0, 188.0), 'R_edge_point': (528.0, 142.0), 'L_highest_point': (152.0, 152.0), 'R_highest_point': (476.0, 104.0), 'L_left_top': (120, 152), 'L_left_bottom': (120, 219), 'L_right_top': (214, 152), 'L_right_bottom': (243, 219), 'R_right_top': (528, 104), 'R_right_bottom': (528, 199), 'R_left_top': (417, 104), 'R_left_bottom': (406, 199), 'cm': 20.0})\n"
      ]
     }
    ],
    "source": [
-    "left_left_top = (int(left_edge_point['x']), int(left_highest_point[1]))\n",
-    "left_left_bottom = (int(left_edge_point['x']), int(left_hole_top_left[1]))\n",
-    "left_right_top = (int(left_right_highest_point[0]),int(left_highest_point[1]))\n",
+    "# segm = Segmentator(model_path=\"weights/segmentation.pt\")\n",
+    "# det = Detector(model_id=\"hip-joint-detection/2\")\n",
+    "# head_segm = HeadSegmentator(model_id=\"femur-head-segmentation/2\")\n",
+    "key_points = get_keypoints(image4, \n",
+    "                           \"weights/segmentation.pt\", \n",
+    "                           \"femur-head-segmentation/2\",\n",
+    "                           \"hip-joint-detection/2\")\n",
     "\n",
-    "dist_left = left_left_top[0] - left_right_top[0]\n",
-    "left_right_top = (int(left_right_highest_point[0] + 2*dist_left + 10), int(left_highest_point[1]))\n",
-    "\n",
-    "print(\"left_right_top\", left_right_top)\n",
-    "left_right_bottom = (int(left_hole_top_left[0]), int(left_hole_top_left[1]))\n",
-    "\n",
-    "right_right_top = (int(right_edge_point['x']), int(right_highest_point[1]))\n",
-    "right_right_bottom = (int(right_edge_point['x']), int(right_hole_top_right[1]))\n",
-    "right_left_top = (int(right_left_highest_point[0]), int(right_highest_point[1]))\n",
-    "dist_right = right_right_top[0] - right_left_highest_point[0] \n",
-    "right_left_top = (int(right_left_highest_point[0] + 2*dist_right + 10), int(right_highest_point[1]))\n",
-    "\n",
-    "print(\"right_left_top\", right_left_top)  \n",
-    "# right_left_top = (int(right_left_highest_point[0] - 2*dist_right - 10), int(right_highest_point[1]))\n",
-    "right_left_bottom = (int(right_hole_top_right[0]), int(right_hole_top_right[1]))\n"
+    "print(key_points)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 16,  81,  12],\n",
-       "        [ 73, 134,  70],\n",
-       "        [  0,  38,   0],\n",
-       "        ...,\n",
-       "        [ 58, 114,  61],\n",
-       "        [ 64, 126,  66],\n",
-       "        [140, 208, 143]],\n",
-       "\n",
-       "       [[  0,  45,   0],\n",
-       "        [  0,  51,   0],\n",
-       "        [  0,  20,   0],\n",
-       "        ...,\n",
-       "        [  9,  59,  11],\n",
-       "        [ 45, 102,  47],\n",
-       "        [129, 191, 131]],\n",
-       "\n",
-       "       [[  0,  27,   0],\n",
-       "        [  0,  20,   0],\n",
-       "        [  0,  17,   0],\n",
-       "        ...,\n",
-       "        [  0,  21,   0],\n",
-       "        [  0,  33,   0],\n",
-       "        [147, 199, 146]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[  0,  23,   0],\n",
-       "        [  0,  42,   0],\n",
-       "        [  0,  16,   0],\n",
-       "        ...,\n",
-       "        [  0,   9,   0],\n",
-       "        [ 55,  92,  54],\n",
-       "        [143, 185, 137]],\n",
-       "\n",
-       "       [[ 23,  81,  22],\n",
-       "        [ 39,  94,  37],\n",
-       "        [  0,  27,   0],\n",
-       "        ...,\n",
-       "        [  0,  21,   0],\n",
-       "        [ 75, 118,  73],\n",
-       "        [152, 203, 146]],\n",
-       "\n",
-       "       [[  0,  38,   0],\n",
-       "        [ 17,  77,  17],\n",
-       "        [  0,  23,   0],\n",
-       "        ...,\n",
-       "        [  0,  23,   0],\n",
-       "        [  0,  43,   0],\n",
-       "        [143, 197, 138]]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cv2.circle(image, left_left_top, 5, (0, 0, 255), -1)\n",
-    "cv2.circle(image, left_left_bottom, 5, (0, 0, 255), -1)\n",
-    "cv2.circle(image, left_right_top, 5, (0, 255, 0), -1)\n",
-    "cv2.circle(image, left_right_bottom, 5, (0, 0, 255), -1)\n",
-    "\n",
-    "cv2.circle(image, right_right_top, 5, (0, 0, 255), -1)\n",
-    "cv2.circle(image, right_right_bottom, 5, (0, 0, 255), -1)\n",
-    "cv2.circle(image, right_left_top, 5, (0, 255, 0), -1)\n",
-    "cv2.circle(image, right_left_bottom, 5, (0, 0, 255), -1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 16,  81,  12],\n",
-       "        [ 73, 134,  70],\n",
-       "        [  0,  38,   0],\n",
-       "        ...,\n",
-       "        [ 58, 114,  61],\n",
-       "        [ 64, 126,  66],\n",
-       "        [140, 208, 143]],\n",
-       "\n",
-       "       [[  0,  45,   0],\n",
-       "        [  0,  51,   0],\n",
-       "        [  0,  20,   0],\n",
-       "        ...,\n",
-       "        [  9,  59,  11],\n",
-       "        [ 45, 102,  47],\n",
-       "        [129, 191, 131]],\n",
-       "\n",
-       "       [[  0,  27,   0],\n",
-       "        [  0,  20,   0],\n",
-       "        [  0,  17,   0],\n",
-       "        ...,\n",
-       "        [  0,  21,   0],\n",
-       "        [  0,  33,   0],\n",
-       "        [147, 199, 146]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[  0,  23,   0],\n",
-       "        [  0,  42,   0],\n",
-       "        [  0,  16,   0],\n",
-       "        ...,\n",
-       "        [  0,   9,   0],\n",
-       "        [ 55,  92,  54],\n",
-       "        [143, 185, 137]],\n",
-       "\n",
-       "       [[ 23,  81,  22],\n",
-       "        [ 39,  94,  37],\n",
-       "        [  0,  27,   0],\n",
-       "        ...,\n",
-       "        [  0,  21,   0],\n",
-       "        [ 75, 118,  73],\n",
-       "        [152, 203, 146]],\n",
-       "\n",
-       "       [[  0,  38,   0],\n",
-       "        [ 17,  77,  17],\n",
-       "        [  0,  23,   0],\n",
-       "        ...,\n",
-       "        [  0,  23,   0],\n",
-       "        [  0,  43,   0],\n",
-       "        [143, 197, 138]]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "cv2.line(image, left_line[0], left_line[1], (255, 0, 0), 2)\n",
-    "cv2.line(image, right_line[0], right_line[1], (0, 255, 0), 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "L_left_top = (int(L_edge_point[0]), int(L_highest_point[1]))\n",
+    "L_left_bottom = (int(L_edge_point[0]), int(L_hole_top_left[1]))\n",
+    "\n",
+    "x0_left, y0_left = L_right_highest_point[0], L_right_highest_point[1]\n",
+    "x1_left, y1_left = L_hole_top_left[0], L_hole_top_left[1]\n",
+    "y_left = L_highest_point[1]\n",
+    "\n",
+    "x_intersection_left = x0_left + ((y_left - y0_left) * (x1_left - x0_left)) / (y1_left - y0_left)\n",
+    "L_right_top = (int(x_intersection_left), int(y_left))\n",
+    "\n",
+    "L_right_bottom = (int(L_hole_top_left[0]), int(L_hole_top_left[1]))\n",
+    "\n",
+    "R_right_top = (int(R_edge_point[0]), int(R_highest_point[1]))\n",
+    "R_right_bottom = (int(R_edge_point[0]), int(R_hole_top_right[1]))\n",
+    "\n",
+    "x0_right, y0_right = R_left_highest_point[0], R_left_highest_point[1]\n",
+    "x1_right, y1_right = R_hole_top_right[0], R_hole_top_right[1]\n",
+    "y_right = R_highest_point[1]\n",
+    "\n",
+    "x_intersection_right = x0_right + ((y_right - y0_right) * (x1_right - x0_right)) / (y1_right - y0_right)\n",
+    "R_left_top = (int(x_intersection_right), int(y_right))\n",
+    "\n",
+    "R_left_bottom = (int(R_hole_top_right[0]), int(R_hole_top_right[1]))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +229,35 @@
        "True"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.circle(image, L_left_top, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, L_right_top, 5, (0, 255, 0), -1)\n",
+    "cv2.circle(image, L_left_bottom, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, L_right_bottom, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, R_left_top, 5, (0, 255, 0), -1)\n",
+    "cv2.circle(image, R_right_top, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, R_left_bottom, 5, (0, 0, 255), -1)\n",
+    "cv2.circle(image, R_right_bottom, 5, (0, 0, 255), -1)\n",
+    "cv2.imwrite(detected, image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
